# uroflow-mobile-concept

./: .gitignore  README.md  pyproject.toml
config/: coverage_targets_config.v1.json
docs/: architecture.md  bench-ml-additional-data-analysis-v0.2.md  certification-pathway-v0.1.md  claims-governance-v0.1.md  clinical-protocol-one-pager-v0.1.md  clinical_and_regulatory_notes.md  concept.md  coreml-architecture-v0.1.md  dpia-checklist.md  intended-use-draft.md  intended-use-v1.md  iso14971-risk-management-v0.1.md  mobile-install-and-field-test-runbook-v0.1.md  mobile-productization-gap-and-backlog-v0.1.md  mobile-release-runbook-v0.1.md  mvp-v0.1-execution-plan 2.md  mvp-v0.1-execution-plan.md  pilot-protocol-v1.md  real-mobile-pilot-mvp.md  regulatory-matrix-ru-cn-eu-us-v0.1 2.md  regulatory-matrix-ru-cn-eu-us-v0.1.md  risk-register-v0.1.csv  roadmap.md  sprint-plan-v0.1-12-weeks.md  stage-1-product-definition.md  stage-2-fusion-development.md  stage-3-multimodal-global-strategy.md  stage-3-synthetic-bench-and-ios-contract.md
examples/: demo_metrics.py  ios_capture_contract_sample.json  level_series_sample.json  synth_reflective.csv  synth_reflective.json  synthetic_flow_curve.csv  synthetic_summary.json
scripts/: build_capture_coverage_fixture_db.py  build_capture_coverage_report.py  build_mobile_release_manifest.py  extract_bench_bom_v0_2.py  extract_project_package_v1_1.py  extract_project_package_v2_5.py  extract_project_package_v2_8.py  extract_project_package_v4_2.py  generate_openclinica_profile_v1_1.py  generate_redcap_dry_run_records_v1_1.py  generate_redcap_profile_v1_1.py  normalize_edc_dictionary_v1_1.py  post_pilot_reports_to_clinical_hub.py
tests/: test_artifact_profile_validator.py  test_capture_contract.py  test_cli_capture_session.py  test_cli_clinical_hub_export.py  test_cli_contract_pipeline.py  test_cli_gate_metrics.py  test_cli_gate_profile.py  test_cli_gates.py  test_events.py  (+12 more)
(+343 files in other folders)
