[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uroflow-mobile-concept"
version = "0.1.0"
description = "Concept repository for smartphone-video-based uroflowmetry"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  {name = "Uroflow R&D Team"}
]
dependencies = [
  "numpy>=1.24",
]

[project.optional-dependencies]
video = [
  "opencv-python>=4.9",
]

[project.scripts]
uroflow-mobile = "uroflow_mobile.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
